PEER-1 add business logic, documentation, tests