@@ -1,5 +1,6 @@
 package com.peer39.bautruk.extractor;
 
+import com.peer39.bautruk.extractor.exception.TextExtractorException;
 import com.peer39.bautruk.extractor.model.UrlContent;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -9,7 +10,6 @@ import org.springframework.web.client.RestTemplate;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.Executor;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -22,19 +22,18 @@ public class UrlTextExtractorService {
 
     public List<UrlContent> extractTextFromUrls(List<String> urls) {
         return urls.parallelStream()
-            .map(url -> CompletableFuture.supplyAsync(() -> extractTextFromUrl(url), taskExecutor))
+            .map(this::extractTextFromUrl)
             .map(CompletableFuture::join)
-            .collect(Collectors.toList());
+            .toList();
     }
 
-    private UrlContent extractTextFromUrl(String urlString) {
+    public CompletableFuture<UrlContent> extractTextFromUrl(String urlString) {
         try {
             String html = restTemplate.getForObject(urlString, String.class);
             String text = htmlTextExtractor.extractText(html);
-            return new UrlContent(urlString, text);
+            return CompletableFuture.completedFuture(new UrlContent(urlString, text));
         } catch (Exception e) {
-            log.error("Error fetching URL: {}", urlString, e);
-            return new UrlContent(urlString, "Error: " + e.getMessage());
+            throw new TextExtractorException("Error fetching URL: " + urlString, e);
         }
     }
 }
